--- a/bin/public/style/settings.css
+++ b/bin/public/style/settings.css
@@ -57,3 +57,11 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+.switch_container label {
+  font-weight: normal;
+}
+
+.form-group label {
+  font-weight: normal;
+}
