--- a/bin/public/style/settings.css
+++ b/bin/public/style/settings.css
@@ -57,3 +57,12 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+.form-group label {
+  font-weight : normal;
+}
+
+.section_head {
+  font-weight : bold;
+  font-size: 16px;
+}
