--- a/app/bin/public/ejs/index.ejs
+++ b/app/bin/public/ejs/index.ejs
@@ -36,10 +36,10 @@
 
   <!--Container for page  -->
   <div class="container">
-    <h3><%= datetime %></h3>
+    <h3><%= dbData %></h3>
     <!--Container for section  -->
     <div class="section_today_container">
-      <p>Anna's birthday(23)</p>
+      <p>Anne's birthday(23)</p>
       <p>Ascension day(DK)</p>
       <p>Fatima's name day(DK)</p>
     </div>
